<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app"
    android:paddingTop="@dimen/status_bar_size"
    tools:context="com.vnyi.emenu.maneki.activities.MainActivity">

    <ImageView
        android:id="@+id/ivConfigHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_app_black" />

    <LinearLayout
        android:id="@+id/llTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/bg_header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_content"
        android:paddingLeft="@dimen/padding_content"
        android:paddingRight="@dimen/padding_content"
        android:paddingTop="@dimen/padding_content">

        <com.qslib.customview.textview.ExtTextView
            android:id="@+id/tvMenu"
            style="@style/tvTabHeaderStyle"
            android:text="@string/menu"
            app:textViewFontAssetName="Redsun design DE Light" />

        <com.qslib.customview.textview.ExtTextView
            android:id="@+id/tvOrder"
            style="@style/tvTabHeaderStyle"
            android:text="@string/order"
            app:textViewFontAssetName="cour" />

        <com.qslib.customview.textview.ExtTextView
            android:id="@+id/tvSaleOff"
            style="@style/tvTabHeaderStyle"
            android:text="@string/sale"
            app:textViewFontAssetName="Redsun  Vietnam Bold" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:id="@+id/tvCallWaiter"
            style="@style/tvTabHeaderStyle"
            android:text="@string/call_staff"
            app:font="cour" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:id="@+id/tvPayment"
            style="@style/tvTabHeaderStyle"
            android:text="@string/payment"
            app:font="cour" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:id="@+id/tvUseApp"
            style="@style/tvTabHeaderStyle"
            android:text="@string/use_intro"
            app:font="Redsun  Vietnam Italic" />

        <LinearLayout
            android:id="@+id/llChangeLanguage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvEnglish"
                style="@style/tvTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_description"
                app:font="Redsun  Vietnam Italic" />

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvVietnamese"
                style="@style/tvTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/vietnamese"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_description"
                app:font="Redsun  Vietnam Italic" />
        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/flMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llTab" />

</RelativeLayout>
