<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/width_dialog_default"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:id="@+id/tvTableName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_app"
            android:gravity="center"
            android:padding="@dimen/padding_content"
            android:text="@string/cfrm_table_order"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content"
            app:textViewFontAssetName="@string/font_redsun_vn" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_recycler_view_default"
            android:gravity="center"
            android:padding="@dimen/padding_content"
            android:textColor="@color/color_black"
            android:text="@string/confirm_remove_item"
            android:textSize="@dimen/font_size_tab_header"
            app:textViewFontAssetName="@string/font_redsun_vn" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height_default"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_content"
                android:layout_weight="1"
                android:background="@color/color_app"
                android:text="@string/yes"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_content"
                android:layout_weight="1"
                android:background="@color/color_app"
                android:text="@string/no"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>