<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/margin_payment"
    android:layout_marginStart="@dimen/margin_payment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeaderTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_content"
        android:paddingTop="@dimen/padding_content">

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/table"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:id="@+id/tvTableName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="D1"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title" />

        <com.vnyi.emenu.maneki.customviews.TextViewFont
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/vnd"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_title" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llHeaderTable"

        android:background="@color/white" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvItemOrder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/PriceTotal"
        android:layout_below="@+id/llHeaderTable"
        android:layout_marginTop="@dimen/padding_layout" />

    <LinearLayout
        android:id="@+id/PriceTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llAction"
        android:background="@color/color_transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_item"
            android:paddingTop="@dimen/padding_item">

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                style="@style/tvMoneyTotalStyle"
                android:text="@string/money_amount"
                android:textAllCaps="true" />

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvTotalMoney"
                style="@style/tvMoneyTotalStyle"
                android:gravity="right"
                android:text="0 VND" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_item"
            android:paddingTop="@dimen/padding_item">

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                style="@style/tvMoneyTotalStyle"
                android:text="@string/discount" />

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvSaleOffPrice"
                style="@style/tvMoneyTotalStyle"
                android:gravity="right"
                android:text="0 VND" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_content"
            android:paddingTop="@dimen/padding_item">

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                style="@style/tvMoneyTotalStyle"
                android:text="VAT" />

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvVAT"
                style="@style/tvMoneyTotalStyle"
                android:gravity="right"
                android:text="0 VND" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_item"
            android:paddingTop="@dimen/padding_item">

            <com.vnyi.emenu.maneki.customviews.TextViewFont

                style="@style/tvMoneyTotalStyle"
                android:text="@string/total_amount" />

            <com.vnyi.emenu.maneki.customviews.TextViewFont
                android:id="@+id/tvTotalPayment"
                style="@style/tvMoneyTotalStyle"
                android:gravity="right"
                android:text="0 VND" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_layout"
        android:layout_marginTop="@dimen/padding_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_selector"
            android:text="@string/order"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content" />

        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginStart="@dimen/margin_layout_default"

            android:layout_weight="1"
            android:background="@drawable/bg_btn_selector"
            android:text="@string/add_item"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content" />

        <Button
            android:id="@+id/btnCancelOrder"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginStart="@dimen/margin_layout_default"

            android:layout_weight="1"
            android:background="@drawable/bg_btn_selector"
            android:text="@string/cancel_order"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/color_red"
        android:textSize="20dp" />
</RelativeLayout>